feat: 完成前端 webpack 工程化搭建 和 git hooks 配置 和 eslint 配置

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,6 +10,21 @@
       "name": "启动程序",
       "skipFiles": ["<node_internals>/**"],
       "program": "${workspaceFolder}\\index.js"
+    },
+    {
+      "name": "Current File",
+      "program": "${file}",
+      "request": "launch",
+      "skipFiles": ["<node_internals>/**"],
+      "type": "node"
+    },
+    {
+      "name": "build:prod",
+      "request": "launch",
+      "runtimeArgs": ["run-script", "build:prod"],
+      "runtimeExecutable": "npm",
+      "skipFiles": ["<node_internals>/**"],
+      "type": "node"
     }
   ]
 }
